--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -27,4 +27,10 @@ footer {
     p {
         color: grey;
     }
+    button {
+        background-color: dimgray;
+        color: white;
+        margin-bottom: 3px;
+        border: none;
+    }
 }
