--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -27,10 +27,16 @@ footer {
     p {
         color: grey;
     }
-    button {
+    a {
         background-color: dimgray;
         color: white;
-        margin-bottom: 3px;
-        border: none;
+        line-height: 30px;
+        padding: 3px;
+        border-radius: 10%;
+        &:hover{
+            background-color: red;
+            color: white;
+            text-decoration: none;
+        }
     }
 }
