--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -39,4 +39,12 @@ footer {
             text-decoration: none;
         }
     }
+    img {
+        width: 80px;
+        height: 65px;
+        float:left;
+    }
+    .flot {
+        float:left;
+    }
 }
