--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -341,6 +341,44 @@ template {
   display: none;
 }
 
+* {
+  font-family: 'Roboto', sans-serif;
+}
+
+header .btn {
+  border-radius: 0px;
+}
+
+header .btn-red {
+  background-color: red;
+  color: white;
+}
+
+header .btn-black {
+  background-color: black;
+}
+
+header .connect {
+  bottom: 0%;
+  position: absolute;
+  color: white;
+  background-color: red;
+  width: 100%;
+  padding: 10px;
+}
+
+header .connect p {
+  margin: auto 30px;
+}
+
+header .connect .btn {
+  margin-right: 10px;
+}
+
+header .connect .fa-phone-alt {
+  margin-right: 10px;
+}
+
 header nav {
   width: 100%;
   top: 0%;
@@ -361,6 +399,20 @@ header nav .dropdown button:hover {
   border-radius: 0px 0px 0px 5px;
 }
 
+header nav .dropdown .dropdown-menu {
+  border-radius: 0;
+  padding: 0;
+  margin: 0;
+}
+
+header nav .dropdown .dropdown-menu .dropdown-item {
+  padding: 0px 10px;
+}
+
+header nav .dropdown .dropdown-menu .dropdown-item a {
+  color: black;
+}
+
 header nav .search * {
   border-radius: 40px;
   border: none;
@@ -368,6 +420,7 @@ header nav .search * {
 
 header nav .search input {
   background-color: #0007;
+  padding-left: 30px;
 }
 
 header nav .search input::-webkit-input-placeholder {
@@ -396,7 +449,7 @@ header nav .search .input-group-text a {
 
 header nav .logo h1 {
   font-size: 60px;
-  font-weight: bolder;
+  font-weight: 900;
   text-transform: uppercase;
 }
 
@@ -413,7 +466,7 @@ header nav a:hover {
   color: white;
 }
 
-header nav .title-red {
+header .title-red {
   color: red;
 }
 
@@ -423,9 +476,36 @@ header .nav-browse {
   margin-right: 10px;
 }
 
-header .carousel-item img {
-  -webkit-filter: brightness(0.5);
-          filter: brightness(0.5);
+header .carousel .carousel-caption {
+  top: 50%;
+  left: 50%;
+  bottom: initial;
+  padding: 0;
+  width: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+}
+
+header .carousel .carousel-caption .caption-title h2 {
+  font-size: 65px;
+  -webkit-transform: scaleX(1.1);
+          transform: scaleX(1.1);
+  font-weight: 500;
+}
+
+header .carousel .carousel-caption .caption-title * {
+  margin-bottom: 30px;
+}
+
+header .carousel .carousel-caption .caption-title p {
+  text-transform: uppercase;
+  letter-spacing: 5px;
+  font-weight: 100;
+}
+
+header .carousel .carousel-item img {
+  -webkit-filter: brightness(0.2);
+          filter: brightness(0.2);
   height: 800px;
 }
 /*# sourceMappingURL=style.css.map */
