--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -1,4 +1,5 @@
-@import "_typo.scss";
 @import "_config.scss";
+@import "_typo.scss";
 @import "_main.scss";
+@import "_header.scss";
 @import "_normalize.scss";
