--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -341,17 +341,17 @@ template {
   display: none;
 }
 
-body {
-  overflow: hidden;
-}
-
 footer {
   background-color: black;
   padding-top: 100px;
 }
 
 footer .suscribe {
-  color: red;
+  color: #FE4240;
+  padding-bottom: 1%;
+}
+
+footer .inputsuscribe {
   padding-bottom: 1%;
 }
 
@@ -359,21 +359,17 @@ footer .tableau {
   padding-bottom: 3%;
 }
 
-footer span.cine1 {
+footer .cine1 {
   color: white;
 }
 
-footer span.cine2 {
-  color: red;
+footer .cine2 {
+  color: #FE4240;
 }
 
 footer h4 {
   font-family: "arial";
   color: white;
-}
-
-footer p {
-  color: grey;
 }
 
 footer .btag {
@@ -385,7 +381,7 @@ footer .btag {
 }
 
 footer .btag:hover {
-  background-color: red;
+  background-color: #FE4240;
   color: white;
   text-decoration: none;
 }
@@ -415,23 +411,32 @@ footer .img1 {
      object-fit: cover;
 }
 
-footer .img2 {
-  width: 80px;
-  height: 100px;
+footer .titlemov {
+  color: grey;
+  text-align: left;
 }
 
-footer .colorlinetable {
-  border: 5px solid red;
-  color: blue;
+footer .img2 {
+  width: 75px;
+  height: 110px;
 }
 
 footer hr {
-  border: 1px solid grey;
+  border: 1px solid #4C5155;
   border-right: none;
   border-left: none;
 }
 
 footer .hrespace {
   padding: 2%;
+}
+
+footer .connectus {
+  color: white;
+}
+
+footer i {
+  color: white;
+  margin: 50%;
 }
 /*# sourceMappingURL=style.css.map */
