--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -83,9 +83,11 @@ footer {
         color: white;
     }
 
+    .spanm {
+        margin: 5%;
+    }
     i {
         color: white;
-        margin: 50%;
     }
     
 }
