--- a/assets/scss/_footer.scss
+++ b/assets/scss/_footer.scss
@@ -1,50 +1,60 @@
 footer {
     background-color: black;
     padding-top: 100px;
-    
+
     .suscribe {
         color: #FE4240;
         padding-bottom: 1%;
     }
+
     .inputsuscribe {
         padding-bottom: 1%;
     }
+
     .tableau {
         padding-bottom: 3%;
     }
+
     .cine1 {
         color: white;
     }
+
     .cine2 {
         color: #FE4240;
     }
+
     h4 {
         font-family: "arial";
         color: white;
     }
-    
+
     .btag {
         background-color: dimgray;
         color: white;
         line-height: 30px;
         padding: 3px;
         border-radius: 10%;
-        &:hover{
+
+        &:hover {
             background-color: #FE4240;
             color: white;
             text-decoration: none;
         }
     }
+
     .releases {
         color: dimgray;
-        &:hover{
+
+        &:hover {
             color: white;
             text-decoration: none;
         }
     }
+
     .movies {
         color: dimgray;
-        &:hover{
+
+        &:hover {
             color: white;
             text-decoration: none;
         }
@@ -66,24 +76,36 @@ footer {
         height: 110px;
     }
 
-    hr{
+    hr {
         border: 1px solid #4C5155;
         border-right: none;
         border-left: none;
     }
+
     .hrespace {
         padding: 2%;
     }
+
     .connectus {
         color: white;
+        margin-left: 140px;
     }
 
     .spanm {
         margin: 5%;
     }
-    i {
-        color: white;
-    }
-    
-}
 
+    img{
+        height: 30px;
+        width: 30px;
+        margin:auto;
+        margin-left: 5px;
+        margin-right: 5px;
+        border: 2px solid white;
+    }
+
+    a.cInvisible{
+        border-radius:50%;
+        border: 5px solid white;
+        }
+    }
