--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,418 @@
+.ligne {
+  border-left: 4px solid #FE4240;
+  padding-left: 12px;
+  left: 30px;
+  position: relative;
+}
+
+body {
+  font-size: 100%;
+  font-family: 'Open Sans', sans-serif;
+  font-size: 1em;
+}
+
+.title {
+  font-family: 'Hind', sans-serif;
+}
+
+.title-center {
+  text-align: center;
+}
+
+h1 {
+  font-size: 2.5em;
+  text-transform: uppercase;
+  margin: 0px !important;
+}
+
+h2 {
+  font-size: 2.5em;
+  -webkit-transform: scaleX(1.1);
+      -ms-transform: scaleX(1.1);
+          transform: scaleX(1.1);
+  font-weight: 500;
+}
+
+h3 {
+  font-size: 2em;
+}
+
+h4 {
+  font-size: 1.5em;
+}
+
+.carousel p {
+  text-transform: uppercase;
+  letter-spacing: 5px;
+  font-size: 1em;
+}
+
+a {
+  text-decoration: none;
+}
+
+a:hover {
+  color: #8c1313 !important;
+}
+
+.title-red {
+  color: #FE4240;
+}
+
+.container__center {
+  width: 85%;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+section {
+  margin: 40px 0;
+}
+
+.card-img-top {
+  height: 190px;
+}
+
+@media screen and (min-width: 400px) {
+  .card-img-top {
+    height: 240px;
+  }
+}
+
+@media screen and (min-width: 470px) {
+  .card-img-top {
+    height: 250px;
+  }
+}
+
+@media screen and (min-width: 576px) {
+  .card-img-top {
+    height: 270px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .card-img-top {
+    height: 270px;
+  }
+}
+
+@media screen and (min-width: 992px) {
+  .card-img-top {
+    height: 270px;
+  }
+}
+
+@media screen and (min-width: 992px) {
+  .card-img-top {
+    height: 200px;
+  }
+}
+
+.card {
+  border: none;
+  color: #4C5155;
+  padding: 10px 5px;
+}
+
+.card .title {
+  font-weight: bold;
+}
+
+.card .btn-primary {
+  padding: 0px;
+}
+
+.card .btn-hover {
+  background-color: white;
+  border: none;
+}
+
+.card .btn-hover:hover {
+  opacity: 0.7;
+  background-color: white;
+}
+
+.card .card__name {
+  text-align: center;
+}
+
+.card .grid {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 50% 50%;
+      grid-template-columns: 50% 50%;
+}
+
+.card .card__genre {
+  -ms-grid-column: 2;
+  grid-column: 2;
+  text-align: right;
+}
+
+.card .card__years {
+  -ms-grid-column: 1;
+  grid-column: 1;
+}
+
+.card .gras {
+  font-weight: bold;
+}
+
+.nav .nav-link {
+  background-color: #DCDCDC;
+  color: black;
+  border: 0px;
+  border-radius: 0px;
+}
+
+.nav .nav-link.active, .nav .nav-pills .show > .nav-link {
+  background-color: #FE4240;
+  color: white;
+}
+
+.btn-plus {
+  background-color: #FE4240;
+  border-radius: 0px;
+  border: 0px;
+  text-align: center;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  color: white;
+  text-transform: uppercase;
+}
+
+header .carousel-caption {
+  padding-bottom: 100px;
+}
+
+header .carousel-indicators {
+  padding-bottom: 40px;
+}
+
+header .opa {
+  -webkit-filter: brightness(0.2);
+          filter: brightness(0.2);
+}
+
+header .i-search {
+  position: absolute;
+  z-index: 3;
+  text-align: right;
+}
+
+header .navbar {
+  background-color: transparent;
+  border-color: #E7E7E7;
+  position: absolute;
+}
+
+header .navbar-toggler {
+  border-color: white !important;
+}
+
+header .navbar-light .navbar-toggler-icon {
+  background-image: url("data:image/svg+xml,%3csvg viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'%3e%3cpath stroke='rgba(255,255,255, 1)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
+}
+
+header .d-block {
+  min-height: 500px;
+  -o-object-fit: cover;
+     object-fit: cover;
+  background-size: cover;
+}
+
+header .bg-light {
+  background-color: none !important;
+}
+
+header .btn {
+  border-radius: 0px;
+}
+
+header .bout-search {
+  border-radius: 10px;
+  -webkit-filter: opacity(0.6);
+          filter: opacity(0.6);
+}
+
+header .btn-red {
+  background-color: #FE4240;
+  color: white;
+}
+
+header .navbar-light .navbar-nav .nav-link {
+  color: white;
+}
+
+header .btn-black {
+  background-color: black;
+}
+
+header .connect {
+  bottom: 0%;
+  color: white;
+  background-color: #FE4240;
+  width: 100%;
+  padding: 10px;
+}
+
+header .connect p {
+  margin: auto 30px;
+}
+
+header .connect .btn {
+  margin-right: 10px;
+}
+
+header .connect .fa-phone-alt {
+  margin-right: 10px;
+}
+
+header nav {
+  width: 100%;
+  top: 0%;
+  padding: 2% 3%;
+  z-index: 2;
+  color: white;
+}
+
+header nav .dropdown button {
+  background-color: #0004;
+  color: white;
+  border-radius: 0;
+  margin-left: 10px;
+}
+
+header nav .dropdown .dropdown-menu {
+  border-radius: 0;
+  padding: 0;
+  margin: 0;
+}
+
+header nav .dropdown .dropdown-menu .dropdown-item {
+  padding: 0px 10px;
+}
+
+header nav .dropdown .dropdown-menu .dropdown-item a {
+  color: black;
+}
+
+footer {
+  background-color: black;
+  padding-top: 100px;
+}
+
+footer .suscribe {
+  color: #FE4240;
+  padding-bottom: 1%;
+}
+
+footer .inputsuscribe {
+  padding-bottom: 1%;
+}
+
+footer .tableau {
+  padding-bottom: 3%;
+}
+
+footer .cine1 {
+  color: white;
+}
+
+footer .cine2 {
+  color: #FE4240;
+}
+
+footer h4 {
+  font-family: "arial";
+  color: white;
+}
+
+footer .btag {
+  background-color: dimgray;
+  color: white;
+  line-height: 30px;
+  padding: 3px;
+  border-radius: 10%;
+}
+
+footer .btag:hover {
+  background-color: #FE4240;
+  color: white;
+  text-decoration: none;
+}
+
+footer .releases {
+  color: dimgray;
+}
+
+footer .releases:hover {
+  color: white;
+  text-decoration: none;
+}
+
+footer .movies {
+  color: dimgray;
+}
+
+footer .movies:hover {
+  color: white;
+  text-decoration: none;
+}
+
+footer .img1 {
+  width: 80px;
+  height: 65px;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+footer .titlemov {
+  color: grey;
+  text-align: left;
+}
+
+footer .img2 {
+  width: 75px;
+  height: 110px;
+}
+
+footer hr {
+  border: 1px solid #4C5155;
+  border-right: none;
+  border-left: none;
+}
+
+footer .hrespace {
+  padding: 2%;
+}
+
+footer .connectus {
+  color: white;
+  margin-left: 140px;
+}
+
+footer .spanm {
+  margin: 5%;
+}
+
+footer img {
+  height: 30px;
+  width: 30px;
+  margin: auto;
+  margin-left: 5px;
+  margin-right: 5px;
+  border: 2px solid white;
+}
+
+footer a.cInvisible {
+  border-radius: 50%;
+  border: 5px solid white;
+}
+
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
 /* Document
    ========================================================================== */
