--- a/assets/scss/_footer.scss
+++ b/assets/scss/_footer.scss
@@ -12,7 +12,7 @@ footer {
     }
 
     .tableau {
-        padding-bottom: 3%;
+        padding-bottom: 1%;
     }
 
     .cine1 {
@@ -29,11 +29,10 @@ footer {
     }
 
     .btag {
-        background-color: dimgray;
+        background-color: #242424;
         color: white;
         line-height: 30px;
         padding: 3px;
-        border-radius: 10%;
 
         &:hover {
             background-color: #FE4240;
@@ -61,8 +60,8 @@ footer {
     }
 
     .img1 {
-        width: 80px;
-        height: 65px;
+        width: 90px;
+        height: 100px;
         object-fit: cover;
     }
 
@@ -72,8 +71,8 @@ footer {
     }
 
     .img2 {
-        width: 75px;
-        height: 110px;
+        width: 130px;
+        height: 180px;
     }
 
     hr {
@@ -83,12 +82,13 @@ footer {
     }
 
     .hrespace {
-        padding: 2%;
+        padding: 30px;
     }
 
     .connectus {
         color: white;
         margin-left: 140px;
+        margin-top: 15px;
     }
 
     .spanm {
@@ -99,13 +99,10 @@ footer {
         height: 30px;
         width: 30px;
         margin:auto;
-        margin-left: 5px;
-        margin-right: 5px;
-        border: 2px solid white;
     }
 
     a.cInvisible{
         border-radius:50%;
         border: 5px solid white;
         }
-    }
+}
