--- a/assets/scss/_footer.scss
+++ b/assets/scss/_footer.scss
@@ -32,7 +32,7 @@ footer {
         background-color: #242424;
         color: white;
         line-height: 30px;
-        padding: 3px;
+        padding: 3px 8px;
 
         &:hover {
             background-color: #FE4240;
@@ -87,8 +87,8 @@ footer {
 
     .connectus {
         color: white;
-        margin-left: 140px;
-        margin-top: 15px;
+        margin:auto;
+        margin-bottom:15px;
     }
 
     .spanm {
@@ -98,7 +98,7 @@ footer {
     img{
         height: 30px;
         width: 30px;
-        margin:auto;
+        
     }
 
     a.cInvisible{
