--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -70,6 +70,24 @@ section {
   margin: 40px 0;
 }
 
+.card-header {
+  background-color: white;
+  border-bottom: 0px;
+  text-align: center;
+}
+
+.collapsed:after {
+  content: "Moins de films";
+}
+
+.collapsed span {
+  display: none;
+}
+
+.row {
+  width: 100%;
+}
+
 .card-img-top {
   height: 190px;
 }
@@ -303,6 +321,11 @@ header nav .dropdown .dropdown-menu .dropdown-item a {
 footer {
   background-color: black;
   padding-top: 100px;
+  padding-bottom: 30px;
+}
+
+footer h4 {
+  border-bottom: 2px solid white;
 }
 
 footer .suscribe {
@@ -392,25 +415,29 @@ footer .hrespace {
 
 footer .connectus {
   color: white;
-  margin-left: 140px;
 }
 
 footer .spanm {
   margin: 5%;
 }
 
-footer img {
-  height: 30px;
-  width: 30px;
-  margin: auto;
-  margin-left: 5px;
-  margin-right: 5px;
-  border: 2px solid white;
+footer i {
+  color: white;
 }
 
-footer a.cInvisible {
-  border-radius: 50%;
-  border: 5px solid white;
+footer .border {
+  padding: 3px;
+  margin: 5px;
+  width: 35px;
+}
+
+footer .border .fab {
+  position: relative;
+  left: 5px;
+}
+
+footer .border:hover {
+  background-color: #FE4240;
 }
 
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
