--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -70,6 +70,23 @@ section {
   margin: 40px 0;
 }
 
+#section_shop .carousel-control-prev-icon {
+  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' fill='%23000' viewBox='0 0 8 8'%3e%3cpath d='M5.25 0l-4 4 4 4 1.5-1.5-2.5-2.5 2.5-2.5-1.5-1.5z'/%3e%3c/svg%3e");
+}
+
+#section_shop .carousel-control-next-icon {
+  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' fill='%23000' viewBox='0 0 8 8'%3e%3cpath d='M2.75 0l-1.5 1.5 2.5 2.5-2.5 2.5 1.5 1.5 4-4-4-4z'/%3e%3c/svg%3e");
+}
+
+#section_shop .carousel-control-next, #section_shop .carousel-control-prev {
+  position: relative;
+}
+
+#section_shop .carousel p {
+  text-transform: none;
+  letter-spacing: 0;
+}
+
 .card-header {
   background-color: white;
   border-bottom: 0px;
