--- a/assets/scss/_main.scss
+++ b/assets/scss/_main.scss
@@ -10,10 +10,10 @@ section{
 }
 #section_shop{
     .carousel-control-prev-icon{
-        background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' fill='%23000' viewBox='0 0 8 8'%3e%3cpath d='M5.25 0l-4 4 4 4 1.5-1.5-2.5-2.5 2.5-2.5-1.5-1.5z'/%3e%3c/svg%3e");
+        background-image: url("https://image.noelshack.com/fichiers/2019/25/6/1561216354-prev.png");
     }   
     .carousel-control-next-icon{
-        background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' fill='%23000' viewBox='0 0 8 8'%3e%3cpath d='M2.75 0l-1.5 1.5 2.5 2.5-2.5 2.5 1.5 1.5 4-4-4-4z'/%3e%3c/svg%3e");
+        background-image: url("https://image.noelshack.com/fichiers/2019/25/6/1561216354-next.png");
     }     
     .carousel-control-next, .carousel-control-prev{
         position: relative;
@@ -21,7 +21,41 @@ section{
     .carousel p{
         text-transform: none;
         letter-spacing: 0;
+        color: white;
     }
+    .card-body{
+        background-color: black;
+        width: 100%;
+        p{
+            font-size: 0.8em;
+        }
+    }
+    .video-card-shop{
+        background-color: black;
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+        width: 100%;
+        height: 250px;
+    }
+    .tar_test{
+        width: 100%;
+    }
+    h5{
+        color: red;
+    }
+    .title-shop{
+        color: red;
+        grid-column: 1;
+    }
+    .grid-2{
+        grid-column: 2;
+    }
+    .card-grid{
+        display: grid;
+        grid-template-columns: 30% 70%;
+    }
+    
 }
 
 .card-header{
