--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -4,7 +4,7 @@
 @import "_header.scss";
 @import "_normalize.scss";
 @import "_formulary.scss";
-
+@import "_cookie.scss";
 
 * {
     font-family: 'Roboto', sans-serif;
