--- a/assets/scss/_header.scss
+++ b/assets/scss/_header.scss
@@ -1,9 +1,22 @@
 header{
     .carousel-caption{
-        padding-bottom: 100px;
+        top:50%
     }
     .carousel-indicators{
-        padding-bottom: 40px;
+        top:75%;
+        li{
+            transform: scale(1.1,1.4);
+            margin-right:20px;
+            opacity: 0.8;
+        }
+        .active{
+            background-color:red;
+        }
+    }
+    .carousel-item{
+        img{
+            height: 640px;
+        }
     }
     .opa{
         filter: brightness(0.2);
@@ -16,13 +29,13 @@ header{
         background-color: transparent;
         border-color: #E7E7E7;
         position: absolute;
-       }
         .navbar-toggler{
             border-color: white !important;
         }
         .navbar-light .navbar-toggler-icon{
             background-image: url("data:image/svg+xml,%3csvg viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'%3e%3cpath stroke='rgba(255,255,255, 1)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
         }
+    }
     .d-block{
         min-height: 500px;
         object-fit: cover;
@@ -59,6 +72,7 @@ header{
             margin:auto 30px;
         }
         .btn{
+            z-index: 15;
             margin-right:10px;
         }
         .fa-phone-alt{
