--- a/assets/scss/style.css
+++ b/assets/scss/style.css
@@ -69,6 +69,29 @@ section {
   margin: 40px 0;
 }
 
+.display_none {
+  display: none;
+}
+
+#section_shop .card__prix {
+  color: red;
+}
+
+#section_shop p {
+  font-size: 0.8em;
+}
+
+#section_shop .carousel__boutons {
+  display: block;
+  float: right;
+  position: relative;
+  right: 3px;
+}
+
+#section_shop .carousel-control-prev {
+  float: left;
+}
+
 #section_shop .carousel-control-prev-icon {
   background-image: url("https://image.noelshack.com/fichiers/2019/25/6/1561216354-prev.png");
 }
@@ -79,6 +102,7 @@ section {
 
 #section_shop .carousel-control-next, #section_shop .carousel-control-prev {
   position: relative;
+  width: 22px;
 }
 
 #section_shop .carousel p {
@@ -109,12 +133,14 @@ section {
   width: 100%;
 }
 
-#section_shop h5 {
+#section_shop h4 {
   color: red;
+  text-transform: uppercase;
 }
 
 #section_shop .title-shop {
   color: red;
+  font-size: 1em;
   -ms-grid-column: 1;
   grid-column: 1;
 }
@@ -129,6 +155,27 @@ section {
   display: grid;
   -ms-grid-columns: 30% 70%;
       grid-template-columns: 30% 70%;
+}
+
+#section_shop .cardshop__contenu {
+  background-color: #DCDCDC;
+  padding: 6px;
+}
+
+#section_shop .cardshop__contenu .btn-hover {
+  background-color: #DCDCDC;
+  text-align: center;
+  width: 100%;
+}
+
+.movies__contenu {
+  padding: 6px;
+  font-size: 0.8em;
+}
+
+.movies__contenu .btn-hover {
+  text-align: center;
+  width: 100%;
 }
 
 .card-header {
@@ -189,6 +236,10 @@ section {
   }
 }
 
+.card__genre {
+  text-align: right;
+}
+
 .card {
   border: none;
   color: #4C5155;
@@ -213,6 +264,19 @@ section {
   background-color: white;
 }
 
+.card .btn-close {
+  background-color: #FE4240;
+}
+
+.card .btn-close:hover {
+  opacity: 0.7;
+}
+
+.card .modal-header {
+  background-color: #FE4240;
+  color: white;
+}
+
 .card .card__name {
   text-align: center;
 }
@@ -224,7 +288,7 @@ section {
       grid-template-columns: 50% 50%;
 }
 
-.card .card__genre {
+.card .card__prix {
   -ms-grid-column: 2;
   grid-column: 2;
   text-align: right;
