--- a/assets/scss/_header.scss
+++ b/assets/scss/_header.scss
@@ -1,4 +1,9 @@
+$search-radius:25px;
 header{
+    .title{
+        font-size:55px;
+        font-weight: bolder;
+    }
     .nav-block{
         a{
             display:block;
@@ -27,10 +32,23 @@ header{
         filter: brightness(0.2);
     }
     .i-search{
-        background-color:#474747;
+        background-color:#0007;
+        border:none;
         color:white;
     }
     .navbar {
+        .navbar-decal{
+            margin-bottom:30px;
+        }
+        .round-left{
+            border-radius: $search-radius 0px 0px $search-radius;
+        }
+        .round-right{
+            border-radius: 0px $search-radius $search-radius 0px;
+        }
+        .space-left{
+            padding-left:35px;
+        }
         background-color: transparent;
         border-color: #E7E7E7;
         position: absolute;
@@ -107,7 +125,7 @@ header{
         
         width:100%;
         top:0%;
-        padding:2% 3%;
+        padding:35px !important;
         z-index: 2;
         
         color:white;
