--- a/assets/scss/_header.scss
+++ b/assets/scss/_header.scss
@@ -36,6 +36,9 @@ header{
         border:none;
         color:white;
     }
+    .nav-contact{
+        margin-left:200px;
+    }
     .navbar {
         .navbar-decal{
             margin-bottom:30px;
