--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -757,8 +757,19 @@ template {
 }
 
 .formulaire {
+  background-color: white;
+  position: relative;
+  top: 70px;
+  z-index: 5;
   width: 80%;
+  padding-bottom: 20px;
   margin: auto;
-  border: 2px solid black;
+  border: 2px solid white;
 }
 
+.boutonSend {
+  margin-left: 1.4%;
+}
+.form-control {
+  border: 2px solid lightgray;
+}
