modification header et fichier HTML

--- a/assets/scss/_header.scss
+++ b/assets/scss/_header.scss
@@ -17,13 +17,14 @@ header{
         background-color: transparent;
         border-color: #E7E7E7;
         position: absolute;
-       }
+        }
         .navbar-toggler{
             border-color: white !important;
         }
         .navbar-light .navbar-toggler-icon{
             background-image: url("data:image/svg+xml,%3csvg viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'%3e%3cpath stroke='rgba(255,255,255, 1)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
         }
+        
     .d-block{
         min-height: 500px;
         object-fit: cover;
@@ -68,6 +69,11 @@ header{
     }
     nav{
         .dropdown{
+            &:hover{
+                background-color: #ff4140;
+                color:white;
+                display:block;
+        }
             button{
                 background-color:#0004;
                 color:white;
@@ -80,15 +86,13 @@ header{
                 margin:0;
                 .dropdown-item{
                     padding:0px 10px;
+                    
                     a{
                         color:black;
                     }
                 }
             }
         }
-       
-       
-        
         width:100%;
         top:0%;
         padding:2% 3%;
