--- a/assets/scss/_header.scss
+++ b/assets/scss/_header.scss
@@ -85,18 +85,21 @@ header{
                 margin:0;
                 .dropdown-item{
                     padding:0px 10px;
-                    
+                    ul{
+                        list-style-type: none;
+                        margin-left:0;
+                        padding-left:0;
                     a{
                         color:black;
                     }
                 }
             }
         }
+        }
         width:100%;
         top:0%;
         padding:2% 3%;
         z-index: 2;
-        
         color:white;
     }
     
