--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -220,7 +220,7 @@ header .navbar-light .navbar-toggler-icon {
 header .d-block {
   min-height: 500px;
   -o-object-fit: cover;
-    object-fit: cover;
+     object-fit: cover;
   background-size: cover;
 }
 
@@ -407,21 +407,7 @@ footer .connectus {
   margin-bottom: 15px;
 }
 
-footer .spanm {
-  margin: 5%;
-}
-
-footer img {
-  height: 30px;
-  width: 30px;
-}
-
-footer .icon {
-  margin-left: 8px;
-  margin-right: 8px;
-}
-
-footer a#cRetour {
+footer .connectus a#cRetour {
   border-radius: 3px;
   padding: 10px;
   font-size: 15px;
@@ -438,13 +424,13 @@ footer a#cRetour {
   text-decoration: none;
 }
 
-footer a#cRetour:hover {
+footer .connectus a#cRetour:hover {
   -webkit-transition: all ease-in 0.2s;
   -o-transition: all ease-in 0.2s;
   transition: all ease-in 0.2s;
 }
 
-footer a#cRetour.cInvisible {
+footer .connectus a#cRetour.cInvisible {
   bottom: -35px;
   opacity: 0;
   -webkit-transition: all ease-in 0.5s;
@@ -452,9 +438,23 @@ footer a#cRetour.cInvisible {
   transition: all ease-in 0.5s;
 }
 
-footer a#cRetour.cVisible {
+footer .connectus a#cRetour.cVisible {
   bottom: 20px;
   opacity: 1;
+}
+
+footer .spanm {
+  margin: 5%;
+}
+
+footer img {
+  height: 30px;
+  width: 30px;
+}
+
+footer .icon {
+  margin-left: 8px;
+  margin-right: 8px;
 }
 
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
